--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "backend",
   "version": "1.0.0",
