--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "form-data": "^4.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mailgun.js": "^10.2.3",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "nodemailer": "^6.9.14"
   },
   "name": "backend",
   "version": "1.0.0",
