--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mailgun.js": "^10.2.3",
     "mongoose": "^8.5.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14"
   },
   "name": "backend",
   "version": "1.0.0",
