--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "openai": "^4.57.0"
   },
   "name": "backend",
   "version": "1.0.0",
